Fixing broken emoji on Windows

--- a/src/data/levels/05b_PPU/25_Mapper tick/chat/en.yml
+++ b/src/data/levels/05b_PPU/25_Mapper tick/chat/en.yml
@@ -1,6 +1,6 @@
 main:
   messages:
-  - a final touch 🪄
+  - a final touch ✨
   - some mappers feature a <scanline counter>
   - "we'll implement that as simply as we can:"
   - just call a `tick()` function on cycle 260 of every pre-line and visible scanline
