--- a/src/data/levels/02_Assembly/01_Example program/chat/es.yml
+++ b/src/data/levels/02_Assembly/01_Example program/chat/es.yml
@@ -30,7 +30,7 @@ iknow:
 
 skip:
   run: |
-    level.unlockLetsPlayLevelIfNeeded("lets-play-non-platform-games");
+    level.unlockLetsPlayLevelIfNeeded("lets-play-spacegulls");
     const book = store.getState().book.instance;
     const chapter = book.getChapterOf(level.id);
     const lastLevelId = _.last(chapter.levels).id;
