Adding Dizzy Ship Disaster level and fixing Sprites 5-6 Priorities

--- a/src/data/levels/05b_PPU/17_Sprites 5-6 - Priorities/chat/en.yml
+++ b/src/data/levels/05b_PPU/17_Sprites 5-6 - Priorities/chat/en.yml
@@ -8,7 +8,7 @@ main:
 
 example:
   run: |-
-    {{Top}}.load("SuperTiltBro.neees", "rom", "bin");
+    {{Top}}.loadROM("/roms/.all/SuperTiltBro.neees", "rom");
   messages:
   - take a look at the <cloud> in the middle
   - the cloud is a sprite and the game title is part of the background
