--- a/src/data/levels/✨_Let's play/04_Raven's Gate/chat/en.yml
+++ b/src/data/levels/✨_Let's play/04_Raven's Gate/chat/en.yml
@@ -17,7 +17,7 @@ play:
   run: |
     {{Right}}.stream.zoom();
     {{Right}}.stream.setIntegration("RavensGate");
-    {{Right}}.load("RavensGate.neees", "stream", "bin");
+    {{Right}}.loadROM("/roms/.all/RavensGate.neees", "stream");
   messages:
   - here we go
   - I'll watch your adventure 👀
