--- a/src/data/levels/✨_Let's play/07_Super Tilt Bro/chat/es.yml
+++ b/src/data/levels/✨_Let's play/07_Super Tilt Bro/chat/es.yml
@@ -43,7 +43,7 @@ finish:
   messages:
   - TÚ
   - ¡GANAS!
-  - como prometí, puse mis ROMs en tu directorio 📁  ~/roms~
+  - como prometí, puse la ROM en tu directorio 📁  ~/roms~
   - sigue luchando 💪
   responses:
   - ▶️  continuar [end]
