--- a/src/data/levels/✨_Let's play/15_Robo-Ninja Climb/chat/es.yml
+++ b/src/data/levels/✨_Let's play/15_Robo-Ninja Climb/chat/es.yml
@@ -36,7 +36,7 @@ finish:
   messages:
   - ¡WOW!
   - ¡qué juego difícil!
-  - como prometí, puse mis ROMs en tu directorio 📁  ~/roms~
+  - como prometí, puse la ROM en tu directorio 📁  ~/roms~
   - bien hecho 👏👏
   responses:
   - ▶️  continuar [end]
