--- a/src/data/levels/✨_Let's play/02_Nalleland/chat/en.yml
+++ b/src/data/levels/✨_Let's play/02_Nalleland/chat/en.yml
@@ -43,9 +43,9 @@ finish:
   messages:
   - wow!
   - you've become an expert in this game 🤯
-  - "<! ROM received: 📄  /roms/Nalleland.js"
+  - "<! ROM received: 📄  /roms/Nalleland.neees"
   - as I promised, I put the ROM in your 📁  ~/roms~ directory
-  - "<! ROM received: 📄  /roms/Isostasy.js"
+  - "<! ROM received: 📄  /roms/Isostasy.neees"
   - I've also sent another game called ~Isostasy~
   - enjoy 😎
   responses:
