--- a/src/data/levels/✨_Let's play/04_Raven's Gate/chat/en.yml
+++ b/src/data/levels/✨_Let's play/04_Raven's Gate/chat/en.yml
@@ -34,7 +34,7 @@ finish:
     });
   messages:
   - YOU ARE ~GREAT~.
-  - as I promised, I put my ROMs in your 📁  ~/roms~ directory
+  - as I promised, I put the ROM in your 📁  ~/roms~ directory
   - congratulations 🙃
   responses:
   - ▶️  continue [end]
