--- a/src/data/levels/✨_Let's play/07_Super Tilt Bro/chat/en.yml
+++ b/src/data/levels/✨_Let's play/07_Super Tilt Bro/chat/en.yml
@@ -43,7 +43,7 @@ finish:
   messages:
   - YOU
   - WIN!
-  - as I promised, I put my ROMs in your 📁  ~/roms~ directory
+  - as I promised, I put the ROM in your 📁  ~/roms~ directory
   - keep fighting 💪
   responses:
   - ▶️  continue [end]
