--- a/src/data/levels/✨_Let's play/15_Robo-Ninja Climb/chat/en.yml
+++ b/src/data/levels/✨_Let's play/15_Robo-Ninja Climb/chat/en.yml
@@ -36,7 +36,7 @@ finish:
   messages:
   - WHOA!
   - what a difficult game!
-  - as I promised, I put my ROMs in your 📁  ~/roms~ directory
+  - as I promised, I put the ROM in your 📁  ~/roms~ directory
   - well done 👏👏
   responses:
   - ▶️  continue [end]
