--- a/src/data/levels/✨_Let's play/03_Jupiter Scope 2/chat/en.yml
+++ b/src/data/levels/✨_Let's play/03_Jupiter Scope 2/chat/en.yml
@@ -33,7 +33,7 @@ play:
 
 finish:
   run: |
-    const directory = `${Drive.ROMS_DIR}/shooting`;
+    const directory = `${Drive.ROMS_DIR}`;
     filesystem.mkdirp(directory);
 
     ["JupiterScope2.neees", "StarPowerDemo.neees"].forEach((file) => {
