--- a/src/data/levels/✨_Let's play/07_Super Tilt Bro/chat/es.yml
+++ b/src/data/levels/✨_Let's play/07_Super Tilt Bro/chat/es.yml
@@ -35,7 +35,7 @@ play:
 
 finish:
   run: |
-    const directory = `${Drive.ROMS_DIR}/battle`;
+    const directory = `${Drive.ROMS_DIR}`;
     filesystem.mkdirp(directory);
 
     ["SuperTiltBro.neees", "Wolfling.neees"].forEach((file) => {
