--- a/src/data/levels/✨_Let's play/15_Robo-Ninja Climb/chat/en.yml
+++ b/src/data/levels/✨_Let's play/15_Robo-Ninja Climb/chat/en.yml
@@ -8,7 +8,8 @@ main:
   - |-
     it's called 🤖 🧗  ~Robo-Ninja Climb~
     <{screenshot.png;30x30}>
-  - if you complete it, I'll send you all my 🕹️  <arcade> games
+  - you'll have to climb <like a ninja> here
+  - if you complete it, I'll send you the <ROM file>
   - in the ~*.neees~ format
   responses:
   - that sounds easy 🙌 [play]
@@ -27,15 +28,16 @@ play:
 
 finish:
   run: |
-    const directory = `${Drive.ROMS_DIR}/arcade`;
+    const directory = `${Drive.ROMS_DIR}`;
     filesystem.mkdirp(directory);
 
-    ["Heist.neees", "RoboNinjaClimb.neees", "Thwaite.neees"].forEach((file) => {
+    ["RoboNinjaClimb.neees"].forEach((file) => {
       filesystem.cp(`${Drive.ALLROMS_DIR}/${file}`, `${directory}/${file}`);
     });
   messages:
   - WHOA!
   - what a difficult game!
+  - "<! ROM received: 📄  /roms/RoboNinjaClimb.neees"
   - as I promised, I put the ROM in your 📁  ~/roms~ directory
   - well done 👏👏
   responses:
