Adding DizzySheepDisaster level

--- a/src/data/levels/✨_Let's play/01_Spacegulls/chat/es.yml
+++ b/src/data/levels/✨_Let's play/01_Spacegulls/chat/es.yml
@@ -8,7 +8,7 @@ main:
   - |-
     se llama 🕊️ 🛰️  ~Spacegulls~
     <{screenshot.png;30x30}>
-  - un buen plataformero que presenta pájaros en el espacio
+  - un buen plataformero que presenta <pájaros> en el espacio
   - si lo completas, te enviaré el <archivo ROM>
   - en el formato ~*.neees~
   responses:
