--- a/src/data/levels/✨_Let's play/03_Jupiter Scope 2/chat/es.yml
+++ b/src/data/levels/✨_Let's play/03_Jupiter Scope 2/chat/es.yml
@@ -8,7 +8,7 @@ main:
   - |-
     se llama 🚀 💥  ~Jupiter Scope 2~
     <{screenshot.png;30x30}>
-  - un <space shooter> vertical
+  - un <shooter espacial> vertical
   - si superas mi puntuación más alta, te enviaré el <archivo ROM>
   - en el formato ~*.neees~
   responses:
