--- a/src/data/levels/✨_Let's play/04_Raven's Gate/chat/es.yml
+++ b/src/data/levels/✨_Let's play/04_Raven's Gate/chat/es.yml
@@ -8,6 +8,7 @@ main:
   - |-
     se llama 🦅 ⛩️  ~Raven's Gate~
     <{screenshot.png;30x30}>
+  - una <aventura de acción> clásica de la era de la NEEES
   - si lo completas, te enviaré el <archivo ROM>
   - en el formato ~*.neees~
   responses:
