--- a/src/data/levels/✨_Let's play/15_Robo-Ninja Climb/chat/es.yml
+++ b/src/data/levels/✨_Let's play/15_Robo-Ninja Climb/chat/es.yml
@@ -18,7 +18,7 @@ play:
   run: |
     {{Right}}.stream.zoom();
     {{Right}}.stream.setIntegration("RoboNinjaClimb");
-    {{Right}}.load("/roms/.all/RoboNinjaClimb.neees", "stream");
+    {{Right}}.loadROM("/roms/.all/RoboNinjaClimb.neees", "stream");
   messages:
   - bueno, no lo es 🙃
   - de hecho, morirás muchísimo
