--- a/src/data/levels/✨_Let's play/08_Wolf Spirit/chat/en.yml
+++ b/src/data/levels/✨_Let's play/08_Wolf Spirit/chat/en.yml
@@ -36,7 +36,7 @@ finish:
   messages:
   - whoa
   - balance has been restablished
-  - at least, the demo balance
+  - at least, the <demo> balance
   - "<! ROM received: 📄  /roms/WolfSpirit.neees"
   - as I promised, I put the ROM in your 📁  ~/roms~ directory
   - "<! ROM received: 📄  /roms/FilthyKitchen.neees"
