Adding MinekartMadness level

--- a/src/data/levels/✨_Let's play/08_Wolf Spirit/chat/es.yml
+++ b/src/data/levels/✨_Let's play/08_Wolf Spirit/chat/es.yml
@@ -8,7 +8,7 @@ main:
   - |-
     se llama 🐺 🌲  ~Wolf Spirit~
     <{screenshot.png;30x30}>
-  - un plataformero platformer acerca de un <espíritu maligno> que lanzó una maldición sobre el mundo
+  - un plataformero acerca de un <espíritu maligno> que lanzó una maldición sobre el mundo
   - si lo completas, te enviaré el <archivo ROM>
   - en el formato ~*.neees~
   responses:
