--- a/src/data/levels/✨_Let's play/08_Wolf Spirit/chat/es.yml
+++ b/src/data/levels/✨_Let's play/08_Wolf Spirit/chat/es.yml
@@ -12,7 +12,7 @@ main:
   - si lo completas, te enviaré el <archivo ROM>
   - en el formato ~*.neees~
   responses:
-  - ¿Y puedo jugar como un lobo? [play]
+  - ¿y puedo jugar como un lobo? [play]
 
 play:
   run: |
