--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.5.0",
-    "react-diff-viewer": "^3.1.1",
+    "react-diff-viewer": "3.1.1",
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.3.5",
     "react-hot-toast": "^2.5.2",
